css/style.css
/* 
Oliver Rayner
July 2022 
*/

/* Fonts */
@import url("https://use.typekit.net/ljf4sxo.css");
@import url('https://fonts.googleapis.com/css2?family=Piazzolla:opsz,wght@8..30,700&family=Roboto+Condensed&family=Rock+Salt&family=Space+Mono:wght@400;700&display=swap');
body {

    /* Color Palettes */

    /* Old Macintosh */
    --black-olive: #3A403Dff;
    --ash-gray: #C0BDACff;
    --cultured: #EEEEEEff;
    --black-olive-2: #454B47ff;
    --cultured-2: #ECECECff;
    
    /* Kurzgesagt Galaxy */
    --persian-indigo: #2A0970ff;
    --maximum-yellow-red: #FDBC5Aff;
    --persian-indigo-2: #3E1380ff;
    --russian-violet: #140B46ff;
    --blue-pigment: #3130A8ff;

    /* Salmon Pink/Gray */
    --light-salmon-pink: #FFC8C8;
    --salmon-pink: #FF9999;
    --light-salmon-gray: #444F5A;
    --salmon-gray: #3E4149;

    /* Mars */
    --mars-white: #f0e7e7;
    --mars-brown: #451804;
    --mars-dark-orange: #c1440e;
    --mars-orange: #e77d11;
    --mars-light-orange: #fda600;


    /* Background */
    background-color: #181817;
    
    /* Text */
    color: white;

    /* Window Sizes */
    padding: 0;
    margin: 0;

    /* Cursor */
    cursor: none;

}

.dot {
    border-radius: 50%;
    width: 7px;
    height: 7px;
    background-color: var(--mars-white);
    display: inline-block;
    z-index: 5;
}

.tooltip {
    visibility: hidden;
    border-radius: min(2.5vw, 2.5vh);
    height: min(5vh, 5vw);
    width: min(20vh, 20vw);
    background-color: black;
    z-index: 4;
    position: absolute;

}

body h1 {
    font-family: 'Piazzolla', serif;
    font-weight: 700;
    font-size: min(8vw, 8vh);
    margin: 0;
}

body h4 {
    margin: 0;
}

body h5 {
    font-family: 'Rock Salt', cursive;
    font-size: min(1.5vw, 1.5vh);
    margin: 0;
}

body p {
    font-family: 'space-mono', mono;
    font-weight: 400;
    font-style: normal;
}

body .personal_note {
    position: absolute;
    bottom: 1vw;
    right: 1vw;

    font-family: 'space-mono', mono;
    font-size: min(1.5vw, 1.5vh);
    color: var(--light-salmon-gray);
    opacity: 0.8;
}

body .highlight_number {
    font-family: 'Rock Salt', cursive;
    color: yellow;
}

body .link {
    text-decoration: underline;
    text-decoration-style: wavy;
    text-decoration-color: var(--mars-light-orange);
    color: inherit;
}

body .navbar {
    width: 10vw;
    height: 100vh;
    border-right: 2px solid white;
    background-color: inherit;
    padding: 0 0;
}

body .navbar .icon {
    width: 50%;
    margin: auto;
    display: block;
    padding: 1vh 0;
}

body .title_page {

    margin: auto;
    padding: 0;
    display: flex;
    width: 100vw;
    height: 100vh;

}

body .title_page .image_self {
    margin: auto 0;
    color: inherit;
    background: url('/images/me_ch.jpg') no-repeat center center;
    background-size: 45vh;
    height: 100vh;
    width: 30vw;
    max-width: 295px;
    float: left;
}

body .title_page .title_container {
    width: 70vw;
    float: right;
    margin: 0 0;
    border-left: 2px solid white;
}

body .title_page .title_container .title_background_text {
    font-size: min(8.5vh, 8.5vw);
    color: var(--black-olive);
    opacity: 0.25;
    font-family: 'space-mono';
    font-weight: 700;
    line-height: 0.8;
    position: fixed;
    top: 2%;
    right: 2%;
}

body .title_page .title_container .title_body {
    display: flex;
    margin: 2vh 2vw;

    opacity: 0;
    animation: fadeIn 2s forwards;
}

body .title_page .title_container .title_body .title_body_section {
    font-size: min(2vw, 2vh);
    font-family: 'space-mono', mono;
    color: var(--mars-white);
    width: 50%;
    margin: 0vh 2vw;
    text-align: left;
}

body .title_page .title_container .title_body .title_body_section .highlight {
    font-family: 'Rock Salt', cursive;
    color: var(--mars-orange);
    font-size: min(1.5vw, 1.5vh);
    line-height: 1;
}

body .title_page .title_container .title_body .title_body_section .sticky_note {

    background-color: var(--mars-white);
    border-radius: 1vw;
    padding: 2vh 2vw;
    width: 101%;
    color: black;
    transform: translateX(-7%);
    display: grid;

}

body .title_page .title_container .title_body .title_body_section .sticky_note .sticky_note_heading {
    font-family: 'Roboto Condensed', sans-serif;
    border-bottom: 2px solid var(--ash-gray);
    font-size: min(1.4vw, 1.4vh);
    color: gray;
}

body .title_page .title_container .title_body .title_body_section .sticky_note .sticky_note_body {
    padding: 1vh 0;
    font-size: min(1.5vw, 1.5vh);
}

body .title_page .title_container .title_body .title_body_section .sticky_note .sticky_note_date {
    font-family: 'Roboto Condensed', sans-serif;
    text-align: left;
    font-size: min(1.4vw, 1.4vh);
    color: gray;
    display: flex;
    flex-direction: column;
    margin-left: auto;
    margin-right: 0;
}

body .title_page .title_container .title_body .title_body_section .sticky_note_dark {

    background-color: rgba(255, 255, 255, 0.05);
    border-radius: 1vw;
    padding: 2vh 2vw;
    width: 101%;
    color: black;
    transform: translateX(-7%);
    display: grid;

}

body .title_page .title_container .title_body .title_body_section .sticky_note_dark .sticky_note_heading_dark {
    font-family: 'Roboto Condensed', sans-serif;
    border-bottom: 2px solid var(--salmon-gray);
    font-size: min(1.4vw, 1.4vh);
    color: gray;
}

body .title_page .title_container .title_body .title_body_section .sticky_note_dark .sticky_note_body_dark {
    padding: 1vh 0;
    font-size: min(1.5vw, 1.5vh);
    color: var(--mars-white);
}

body .title_page .title_container .title_body .title_body_section .sticky_note_dark .sticky_note_date_dark {
    font-family: 'Roboto Condensed', sans-serif;
    text-align: left;
    font-size: min(1.4vw, 1.4vh);
    color: gray;
    display: flex;
    flex-direction: column;
    margin-left: auto;
    margin-right: 0;
}

body .title_page .title_banner {
    color: var(--mars-white);

    padding: 4vh 2vw;
    font-size: min(6vw, 6vh);

    font-family: 'Rock Salt';
    font-size: 100%;
}

body .solar_system {
    background-image: url('/images/space.gif');
    background-repeat: repeat;
    background-size: cover;
}

@keyframes fadeIn {
    0% { opacity: 0; }
    100% { opacity: 1; }
}

